[package]
name = "farc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "farc"
crate-type = ["cdylib"]

[dependencies]
binrw = "0.10.0"
libflate = "1.2.0"
pyo3 = { version = "0.18.1", features = ["extension-module", "abi3-py37"] }
